--- a/templates/index.html
+++ b/templates/index.html
@@ -81,7 +81,7 @@
             </div>
         </div>
     
-      <table id="posts" class="table well table-striped table-bordered">
+      <table id="posts" class="table table-striped table-bordered">
         <thead>
             <tr>
                 <th>Position</th>
